# MemGuard

./: .env.example  .env.production  .gitignore  CONTRIBUTING.md  Caddyfile  Claude.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_webhooks.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  main.tsx
memguard_logo/: memguard-brand.css
scripts/: backup.sh  entrypoint.sh
src/: config.py  main.py
src/api/: deps.py  exceptions.py  middleware.py  router.py  schemas.py  webhooks.py
src/connectors/: base.py  generic_rest.py  langmem.py  letta.py  mem0.py  registry.py  zep.py
src/engine/: fact_classifier.py  prompts.py  trust_calculator.py  validator.py
src/mcp/: server.py
src/models/: __init__.py  audit_log.py  base.py  connector_config.py  memory_record.py  quarantine_entry.py  staleness_pattern.py  tenant.py  validation_job.py  validation_result.py  webhook.py
src/quarantine/: manager.py  remediation.py
src/scheduler/: prioritizer.py  scheduler.py  tasks.py
src/utils/: audit.py  crypto.py  rate_limiter.py
tests/: conftest.py
tests/fixtures/: mock_sources.json  sample_memories.json
tests/integration/: test_api_routes.py
tests/unit/: test_crypto.py  test_fact_classifier.py  test_prioritizer.py  (+3 more)
(+37 files in other folders)
